trying again as github page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Employee Learning Program Analysis">
+    <meta name="keywords" content="Pearson Employee Learning, Program Analysis">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Home</title>
@@ -20,45 +20,55 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": "",
-		"sameAs": [
-				"https://facebook.com/name",
-				"https://twitter.com/name",
-				"https://www.instagram.com/name"
-		]
+		"name": ""
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta name="twitter:site" content="@">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Home">
-    <meta name="twitter:description" content="">
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap"><header class=" u-clearfix u-header u-section-row-container" id="sec-c231"><div class="u-section-rows"></div>
-        <div class="u-align-center-xs u-custom-color-2 u-section-row u-section-row-2" id="sec-71fa">
-          <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-2"></div>
-          <h1>Pearson Employee Learning Program</h1>
-        </div>
+  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap"><header class="u-align-center-xs u-custom-color-2 u-header" id="sec-c231" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
+        <h1 class="u-align-left u-text u-text-1">Pearson Employee Learning</h1>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-c9c8">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="fr-view u-align-center u-clearfix u-rich-text u-text u-text-1">
-          <h1 style="text-align: center;">Employee Learning Program Analysis</h1>
+          <h1 style="text-align: center;">Program Analysis</h1>
           <p>This analysis was performed on the Global Employee Learning dataset.</p>
           <p>*This data is imagined data and does not represent Pearson or any Pearson affiliates.</p>
           <p>* Photo is byby Riccardo Annandale on Unsplash&nbsp;</p>
           <p style="text-align: center;">
             <span style="line-height: 2.0;">
-              <img align="center" style="width: 366px;" class="fr-dib fr-fic" src="images/riccardo-annandale-7e2pe9wjL9M-unsplash.jpg" width="570">The dashboards below&nbsp;
+              <img align="center" style="width: 366px;" class="fr-dib fr-fic" src="images/riccardo-annandale-7e2pe9wjL9M-unsplash.jpg" width="570">The dashboards below 
             </span>
           </p>
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-section-2" id="sec-e81c">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <div class='tableauPlaceholder' id='viz1637755676074' style='position: relative'><noscript><a href='#'><img alt='Employee Learning Analysis ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;58&#47;58MG6RK2S&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;58MG6RK2S' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;58&#47;58MG6RK2S&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1637755676074');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1016px';vizElement.style.height='991px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <section class="u-clearfix u-section-2" id="sec-00fb">
+      <div class="u-align-left u-clearfix u-sheet u-sheet-1">
+        <div class="u-clearfix u-custom-html u-custom-html-1">
+          <div class="tableauPlaceholder" id="viz1637757848888" style="position: relative">
+            <noscript>&amp;amp;amp;amp;amp;amp;amp;amp;lt;a href='#'&amp;amp;amp;amp;amp;amp;amp;amp;gt;&amp;amp;amp;amp;amp;amp;amp;amp;lt;img alt='Employee Learning Analysis ' src='https:&amp;amp;amp;amp;amp;amp;amp;amp;amp;#47;&amp;amp;amp;amp;amp;amp;amp;amp;amp;#47;public.tableau.com&amp;amp;amp;amp;amp;amp;amp;amp;amp;#47;static&amp;amp;amp;amp;amp;amp;amp;amp;amp;#47;images&amp;amp;amp;amp;amp;amp;amp;amp;amp;#47;Ex&amp;amp;amp;amp;amp;amp;amp;amp;amp;#47;ExploratoryDataAnalysis_16376366741460&amp;amp;amp;amp;amp;amp;amp;amp;amp;#47;EmployeeLearningAnalysis&amp;amp;amp;amp;amp;amp;amp;amp;amp;#47;1_rss.png' style='border: none' /&amp;amp;amp;amp;amp;amp;amp;amp;gt;&amp;amp;amp;amp;amp;amp;amp;amp;lt;/a&amp;amp;amp;amp;amp;amp;amp;amp;gt;</noscript>
+            <object class="tableauViz" style="display:none;">
+              <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F">
+              <param name="embed_code_version" value="3">
+              <param name="site_root" value="">
+              <param name="name" value="ExploratoryDataAnalysis_16376366741460/EmployeeLearningAnalysis">
+              <param name="tabs" value="no">
+              <param name="toolbar" value="yes">
+              <param name="static_image" value="https://public.tableau.com/static/images/Ex/ExploratoryDataAnalysis_16376366741460/EmployeeLearningAnalysis/1.png">
+              <param name="animate_transition" value="yes">
+              <param name="display_static_image" value="yes">
+              <param name="display_spinner" value="yes">
+              <param name="display_overlay" value="yes">
+              <param name="display_count" value="yes">
+              <param name="language" value="en-US">
+              <param name="filter" value="publish=yes">
+            </object>
+          </div>
+          <script type="text/javascript"> var divElement = document.getElementById('viz1637757848888');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1016px';vizElement.style.height='991px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement); </script>
+        </div>
+      </div>
     </section>
     <section class="u-clearfix u-section-3" id="sec-ef3d">
       <div class="u-clearfix u-sheet u-sheet-1"></div>
