--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Pearson Employee Learning">
+    <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Contact</title>
@@ -23,11 +23,9 @@
     <meta property="og:title" content="Contact">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-align-center-xs u-custom-color-2 u-header" id="sec-c231" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-left u-text u-text-1">Pearson Employee Learning</h1>
+  <body class="u-body"><header class="u-align-center-xs u-header u-palette-1-dark-1" id="sec-c231" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <h1 class="u-align-left u-text u-text-1">Pearson Global Employee Learning Dashboard</h1>
       </div></header> 
-    
-    
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-74dc"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Thank you for this opportunity. I loved this data dive!</p>
       </div></footer>
