fixing spelling error

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                   <h2 class="u-custom-font u-font-playfair-display u-text u-text-black u-text-1">Considerations<br>Program Impacts
                   </h2>
                   <div class="u-border-6 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
-                  <p class="u-text u-text-grey-50 u-text-2"> The McKinsey Leadership programs seem to outshine the other three when considering only NPS scores; however, it is necessary to note that there were only 13 participants in the McKinsey Black Leadership program and 22 in the McKinsey Asian Leadership Program. There were 348 participants in iLead, 801 in Manage, and 105 in iLead. The smaller groups may have contributed to the higher ratings.&nbsp;</p>
+                  <p class="u-text u-text-grey-50 u-text-2"> The McKinsey Leadership programs seem to outshine the other three when considering only NPS scores; however, it is necessary to note that there were only 13 participants in the McKinsey Black Leadership program and 22 in the McKinsey Asian Leadership Program. There were 348 participants in iLead, 801 in iManage, and 105 in iLead. The smaller groups may have contributed to the higher ratings.&nbsp;</p>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
