adding note and fixing grammatical error

--- a/index.html
+++ b/index.html
@@ -170,9 +170,15 @@
                     </li>
                     <li>
                       <span class="u-text-black">
-                        <br>In future surveys, is it possible to include other gender identifcations (such as: transgender, non-binary​, queer). 
+                        <br>In future surveys, is it possible to include other gender identifcations (such as: transgender, non-binary​, queer)?
                       </span>
                     </li>
+                    <li>
+                      <span class="u-text-black">
+                        <br>Note for consideration: In future analyses, consider including gender/ethnicity data when in looking at program impact. 
+                      </span>
+                    </li>
+                    
                   </ul>
                 </div>
               </div>
