--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <li>Use the dropdown menu to filter for a particular business unit (you may choose more than one).</li>
           <li>Hover over the graphs and tables to see more information for each category.</li>
           <li>You can also click a bar, cell, or section to hone in on one or more particular demographic(s).</li>
-          <li>To unfilter, click the whitespace within a bargraph, the bottom line of the the or the whitespace just above the first cell of the table, or any whitespace just outside the donut chart.</li>
+          <li>To remove filtering from a graph, click the whitespace within a bargraph, the bottom line of the table or the whitespace just above the first cell of the table, or any whitespace just outside the donut chart.</li>
           <li>Click the lighter gray box at the top to see the second, hidden dashboard.</li>
         </ul>
       </div>
