--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
                       <span class="u-text-black" style="font-weight: 700;">QUESTIONS</span>
                     </li>
                     <li>
-                      <span class="u-text-black"> Is is possible to collaborate with Employee Resource Groups to increase diversity of participants across ethnicities, career grades, and gender identities?</span>
+                      <span class="u-text-black"> Is it possible to collaborate with Employee Resource Groups to increase diversity of participants across ethnicities, career grades, and gender identities?</span>
                     </li>
                     <li>
                       <span class="u-text-black">
-                        <br>In future surveys, is it possible to include other gender identifcations (such as: transgender, non-binary​, queer)?
+                        <br>In future surveys, is it possible to include other gender identifications (such as: transgender, non-binary​, queer)?
                       </span>
                     </li>
                     <li>
@@ -217,6 +217,7 @@
                   <p class="u-text u-text-black u-text-3">
                     <span style="font-weight: 700;">QUESTIONS FOR FUTURE ANALYSIS</span>
                     <br>What is the cost of each program? Is a smaller program actually more cost effective? How can this be measured?<br>
+                    <br>What can we learn from the comments offered about each program? Is there a way to enhance the participant experience in iLead, iManage, and Lead to Succeed? What did work in these programs? Why were the McKinsey programs so impactful for participants?<br>
                     <br>What is the impact of the program on an employee in the months following? How does the employee's review status change? Does an employee move to a leadership position across units? Does an employee make a step up (example: from a C2 to a D)?<br>
                     <br>If an employee were to leave the company for a leadership role in another company, is this considered a "success"? How can Pearson retain diverse leaders that the company has invested in?<br>
                     <br>Would including natural language processing to determine participant sentiment across programs offer insight into the effectiveness or ineffectiveness of programs?
