--- a/index.html
+++ b/index.html
@@ -47,11 +47,8 @@
           <p style="text-align: center; line-height: 0.4;">
             <span class="u-text-palette-2-base" style="font-size: 0.875rem;">*Employee data across corporate functions is inaccurate and may not reflect actual percentages.</span>
           </p>
-          <p style="line-height: 0.4;">
-            <span style="font-size: 0.625rem;">*Photo by Ricardo Annandale on Unsplash</span>
-          </p>
           <p>
-            <img align="center" style="width: 309px;" class="fr-dib fr-fic" src="images/riccardo-annandale-7e2pe9wjL9M-unsplash.jpg" width="533">
+            <img align="center" style="width: 309px;" class="fr-dib fr-fic" src="images/inquisitive.jpg" width="533">
           </p>
         </div>
       </div>
