--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <span class="u-text-palette-2-base" style="font-size: 0.875rem;">*This data is imagined data and does not truly represent Pearson, Pearson employees, or any Pearson affiliates.</span>
           </p>
           <p style="text-align: center; line-height: 0.4;">
-            <span class="u-text-palette-2-base" style="font-size: 0.875rem;">*Employee data across corporate functions is inaccurate and may not reflect actual percentages.</span>
+            <span class="u-text-palette-2-base" style="font-size: 0.875rem;">*There may be some inaccuracies of the employee data across corporate functions.</span>
           </p>
           <p>
             <img align="center" style="width: 309px;" class="fr-dib fr-fic" src="images/inquisitive.jpg" width="533">
@@ -58,7 +58,7 @@
       <h2 class="u-align-center u-text u-text-1">
         <span class="u-text-palette-1-dark-1">Accelerated Leadership Programs</span>
       </h2>
-      <p class="u-text u-text-grey-40 u-text-2">Pearson is invested in reskilling and upskilling its employees, to invest in a diverse talent pipeline, and increase diverse talent ( women, BIPOC/BAME) representation at management levels. The data shows participation and NPS evaluation of five leadership programs.</p>
+      <p class="u-text u-text-grey-40 u-text-2">Pearson is invested in reskilling and upskilling its employees, to invest in a diverse talent pipeline, and increase diverse talent ( women, BIPOC/BAME) representation at management levels. The data shows participation and a NPS evaluation of five leadership programs.</p>
       <div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div class="u-container-style u-grey-5 u-list-item u-radius-20 u-repeater-item u-shape-round">
