--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <span class="u-text-palette-2-base" style="font-size: 0.875rem;">*This data is imagined data and does not truly represent Pearson, Pearson employees, or any Pearson affiliates.</span>
           </p>
           <p style="text-align: center; line-height: 0.4;">
-            <span class="u-text-palette-2-base" style="font-size: 0.875rem;">*There may be some inaccuracies in the employee data across corporate functions.</span>
+            <span class="u-text-palette-2-base" style="font-size: 0.875rem;">*There may be some minor inaccuracies in employee data across corporate functions. These do not impact the program results of this analysis.</span>
           </p>
           <p>
             <img align="center" style="width: 309px;" class="fr-dib fr-fic" src="images/inquisitive.jpg" width="533">
