--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     </li>
                     <li>
                       <span class="u-text-black">
-                        <br>Note for consideration: In future analyses, consider including gender/ethnicity data when in looking at program impact. 
+                        <br>Note for consideration: In future analyses, consider including gender/ethnicity data when looking at program impact. 
                       </span>
                     </li>
                     
